fix: post-tag and post-cat align

--- a/css/style.css
+++ b/css/style.css
@@ -8121,7 +8121,7 @@ body.admin-bar .header-menu-area.sticky_menu {
   text-transform: uppercase;
   cursor: default;
 }
-.single-post-item .blog-post-cat span {
+.single-post-item .blog-post-cat > span {
   float: left;
   margin-right: 30px;
   margin-top: 2px;
