--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -343,7 +343,7 @@
   }
   // Post cat
   .blog-post-cat{
-    span{
+    >span{
       float: left;
       margin-right: 30px;
       margin-top: 2px;
